samples/_failures_safe/1761247991_6f161a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b24eb49c.c: In function ‘main’:
./samples/SAFE/__tmp_b24eb49c.c:150:12: error: missing terminating " character
  150 |     printf("\nMatrix B
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_b24eb49c.c:150:5: error: expected expression at end of input
  150 |     printf("\nMatrix B
      |     ^~~~~~
./samples/SAFE/__tmp_b24eb49c.c:150:5: error: expected declaration or statement at end of input
